# LinqForCpp

./: .gitignore  LICENCE.txt  README.md  cmakePerf.bat  cmakeTest.bat
.github/workflows/: build_benchmark.yml  build_test.yml  release.yml
docs/: index.html  mychart.js  sln.sln  style.css
docs/Json/: macos-latest.CPP17.json  macos-latest.CPP20.json  ubuntu-latest.CPP17.json  ubuntu-latest.CPP20.json  windows-latest.CPP17.json  windows-latest.CPP20.json
project/: CMakeLists.txt  CMakeListsBench.txt  packaging.bat
project/CppLinq/: Aggregate.h  Allocator.h  Contains.h  Distinct.h  Empty.h  IteratorBase.h  Linq.h  Min.h  OrderBy.h  PairWise.h  Repeat.h  Reverse.h  Select.h  SequenceEqual.h  Singleton.h  Skip.h  StlCollection.h  Take.h  TakeOne.h  ThenBy.h  TypeTraits.h  Where.h  ZipWith.h
project/Linq/: Aggregate.h  All.h  Allocator.h  Any.h  Avg.h  Contains.h  Count.h  Distinct.h  Empty.h  Generate.h  IteratorBase.h  Linq.h  Max.h  Min.h  MinMax.h  OrderBy.h  PairWise.h  Range.h  Repeat.h  Reverse.h  RuntimeMacro.h  Select.h  SequenceEqual.h  Singleton.h  Skip.h  StlCollection.h  Sum.h  Take.h  TakeOne.h  ThenBy.h  TypeTraits.h  Where.h  ZipWith.h
project/MakeSingleHeader/: Program.cs
project/Packaging/: Program.cs
project/Test/: Aggregate.cpp  All.cpp  Allocation.h  Any.cpp  Avg.cpp  BigStruct.h  Contains.cpp  Count.cpp  Distinct.cpp  Empty.cpp  Max.cpp  Min.cpp  MinMax.cpp  OrderBy.cpp  PairWise.cpp  Range.cpp  Repeat.cpp  Reverse.cpp  Select.cpp  SequenceEqual.cpp  Singleton.cpp  Skip.cpp  Sum.cpp  Take.cpp  TakeOne.cpp  Test.h  Where.cpp  ZipWith.cpp  benchmark.cpp  main.cpp
